--- a/Field Monitoring/Base.lproj/Main.storyboard
+++ b/Field Monitoring/Base.lproj/Main.storyboard
@@ -250,10 +250,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="TjB-YN-ccu" kind="show" identifier="sendJobs" id="d7h-f5-DCm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y5w-nh-hH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1257" y="903"/>
+        </scene>
+        <!--Jobs View Controller-->
+        <scene sceneID="iMx-DQ-Sbt">
+            <objects>
+                <viewController id="TjB-YN-ccu" customClass="JobsViewController" customModule="Field_Monitoring" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FMD-tW-7ar"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hxd-e7-ifu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="82Y-xf-vFw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IwO-vR-vzM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2178" y="902"/>
         </scene>
         <!--Coordinates View Controller-->
         <scene sceneID="gLy-s1-m7O">
