--- a/Field Monitoring/Base.lproj/Main.storyboard
+++ b/Field Monitoring/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yzn-TJ-gEP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="yzn-TJ-gEP">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -251,48 +251,30 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="TjB-YN-ccu" kind="show" identifier="sendJobs" id="d7h-f5-DCm"/>
+                        <segue destination="Wgc-yu-OGx" kind="show" identifier="sendJobs" id="lhs-OY-fAm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y5w-nh-hH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1257" y="903"/>
+            <point key="canvasLocation" x="941" y="642"/>
         </scene>
-        <!--Jobs View Controller-->
-        <scene sceneID="iMx-DQ-Sbt">
+        <!--View Controller-->
+        <scene sceneID="nAf-3g-ZBM">
             <objects>
-                <viewController id="TjB-YN-ccu" customClass="JobsViewController" customModule="Field_Monitoring" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Wgc-yu-OGx" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="FMD-tW-7ar"/>
-                        <viewControllerLayoutGuide type="bottom" id="Hxd-e7-ifu"/>
+                        <viewControllerLayoutGuide type="top" id="xV9-sT-M0S"/>
+                        <viewControllerLayoutGuide type="bottom" id="N4g-3v-WeG"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="82Y-xf-vFw">
+                    <view key="view" contentMode="scaleToFill" id="8fE-F4-s9a" customClass="JobsView">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IwO-vR-vzM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ugc-yo-QbG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2178" y="902"/>
-        </scene>
-        <!--Coordinates View Controller-->
-        <scene sceneID="gLy-s1-m7O">
-            <objects>
-                <viewController id="uO7-pE-l1f" customClass="CoordinatesViewController" customModule="Field_Monitoring" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="yPm-Yk-i0J"/>
-                        <viewControllerLayoutGuide type="bottom" id="B9L-yK-9Qo"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="nGT-Uv-J40">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0Sh-0Y-pKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3512" y="1082"/>
+            <point key="canvasLocation" x="1914" y="643"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5dX-z9-3qW">
